<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">4TComic</string>

    <string name="account_locked">Your account has been locked</string>
    <string name="fill_all_fields">Please fill in all fields</string>
    <string name="incorrect_credentials">Incorrect username or password</string>

    <string name="invalid_email">Invalid email address</string>
    <string name="password_mismatch">Passwords do not match</string>
    <string name="agree_terms">Please agree to the terms and services</string>
    <string name="account_exists">Account already exists</string>
    <string name="account_not_exists">Account already exists</string>
    <string name="random_password_created">A password is set to 12345. Please go to settings to change your password</string>
    <string name="registration_failed">Registration failed. Please try again</string>
    <string name="registration_success">Registration successful</string>

    <string name="name_story">ONE PIECE</string>
    <string name="author_story">created by</string>
    <string name="genre_title">Genre</string>
    <string name="des_title">Description</string>
    <string name="chapter_title">Chapter</string>
    <string name="update_time_title">Updated at:</string>

    <string name="btn_favorite">Favorite</string>
    <string name="btn_favorited">Favorited</string>

    <string name="btn_new">Last chapter</string>
    <string name="btn_cmt">Comment</string>
    <string name="btn_first_chapter">Chapter 1</string>

    <string name="personal_title">Personal</string>
    <string name="edit_profile_title">Edit Profile</string>
    <string name="account_title">Account</string>
    <string name="setting_title">Interface Settings</string>
    <string name="admin_title">Admin</string>

    <string name="logout_title">Logout</string>
    <string name="string_yes">Logout</string>
    <string name="string_no">Cancel</string>
    <string name="title_dialog_logout">Logout</string>
    <string name="message_logout">You will be returned to the login screen!</string>

    <string name="select_img_title">Change avatar</string>
    <string name="btn_change_avatar">Change image</string>
    <string name="btn_delete_avatar">Delete image</string>
    <string name="save_btn_title">Save</string>
    <string name="edit_name_title">Set Display Name</string>
    <string name="num_character">0 / 50</string>
    <string name="nva_name">Nguyen Van A</string>
    <string name="name_user">Unknown</string>

    <string name="change_pass_personal">Change Password</string>
    <string name="email_title">Linked Email:</string>
    <string name="delete_account">Delete Account</string>
    <string name="change_pass">Change Password</string>
    <string name="title_dialog_warning">Warning</string>
    <string name="mes_delete_account">Do you want to delete this account?</string>
    <string name="upload_story_title">Upload Story</string>

    <string name="current_password_title">Current Password</string>
    <string name="new_password_title">New Password</string>
    <string name="confirm_new_password_title">Confirm New Password</string>

    <string name="password_changed">Password changed successfully</string>
    <string name="current_password_required">Current password is required</string>
    <string name="new_password_required">New password is required</string>
    <string name="confirm_password_required">Confirm new password is required</string>
    <string name="incorrect_current_password">Current password is incorrect</string>

    <string name="name_empty">Name cannot be empty</string>
    <string name="update_success">Update successful</string>

    <string name="avatar_upload_fail">Failed to upload avatar image. Please try again.</string>

    <string name="toast_enter_username">Translator not found</string>
    <string name="toast_user_not_found">Please enter translator name</string>

    <string name="toast_genre_not_found">Genre not found</string>
    <string name="toast_please_enter_genre">Please enter genre name</string>

    <string name="toast_author_not_found">Author not found</string>
    <string name="toast_please_enter_author">Please enter author name</string>

    <string name="toast_comic_author_not_found">No comics found for author</string>
    <string name="toast_comic_translator_not_found">No comics found for translator</string>
    <string name="toast_comic_genre_not_found">No comics found for genre</string>
    <string name="toast_comic_not_found">Comic not found</string>
    <string name="title_not_found">No comics found</string>
    <string name="toast_missing_search_text">Please enter search text</string>

    <string name="confirm_delete_history">Are you sure you want to delete this comic history?</string>
    <string name="confirm_delete_history_message">Clicking Yes will permanently delete this comic history.</string>
    <string name="confirm_delete_follow">Are you sure you want to delete this followed comic?</string>
    <string name="confirm_delete_follow_message">Clicking Yes will permanently remove this comic from your followed list.</string>

    <string name="select_all">Select All</string>
    <string name="deselect_all">Deselect All</string>

    <string name="access_denied">You do not have access rights.</string>

    <string name="register_text">&#160;Register&#160;</string>
    <string name="user_name_text">Username</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="confirm_password_text">Confirm Password</string>
    <string name="login_text">&#160;Login&#160;</string>
    <string name="terms_text">I agree to the terms &amp; services</string>
    <string name="terms_text_underline">terms &amp; services</string>
    <string name="forgot_text">&#160;Forgot Password&#160;</string>
    <string name="search_text">Search Comics…</string>
    <string name="trending_text">Trending</string>
    <string name="history_text">History</string>
    <string name="recently_updated">Recently Updated Comic</string>
    <string name="admin_text">Admin Page</string>
    <string name="account_list_text">Recently Created Account</string>
    <string name="recently_comment">Recently Comment</string>
    <string name="upload_text">Upload Comic</string>
    <string name="comic_name_text">Comic Name</string>
    <string name="original_comic_name_text">Original Name</string>
    <string name="author_text">Author</string>
    <string name="category_text">Category</string>
    <string name="summary_text">Summary</string>
    <string name="edt_summary_text">Summary Comic Contents</string>
    <string name="cover_image_text">Cover Image</string>
    <string name="content_image">Avatar Image</string>
    <string name="upload_terms_text">I agree to the terms &amp; services when posting a story</string>
    <string name="select_category">Select categories</string>
    <string name="select_img">Please select both cover and avatar images.</string>
    <string name="upload_chapter">Upload chapter</string>
    <string name="pdf_selector">Select PDF file</string>

    <string name="titleBookcase">Bookshelf</string>
    <string name="History">History</string>
    <string name="Follow">Follow</string>
    <string name="hintSearch">Search</string>
    <string name="title">Title</string>
    <string name="reading">"Reading chapter: "</string>
    <string name="all">Select all</string>
    <string name="remove">Delete</string>
    <string name="filterOldest">Oldest</string>
    <string name="filterNewest">Newest</string>
    <string name="titleChapter">Chapter 1</string>
    <string name="ChooseChapters">Choose chapter</string>
    <string name="chapter">Chapter</string>
    <string name="chapter_upload_success">Chapter uploaded successfully!</string>
    <string name="pdf_upload_fail">Failed to upload PDF.</string>
    <string name="cover_image_upload_fail">Failed to upload cover image.</string>
    <string name="comic_upload_success">Comic uploaded successfully!</string>
    <string name="off">Off</string>
    <string name="on">On</string>

    <string name="title_advance_search">Advanced Search</string>
    <string name="author">Author</string>
    <string name="genre">Genre</string>
    <string name="translator">Translator</string>
    <string name="find_translator">Find by translator</string>

    <string name="title_comment">Comment</string>
    <string name="hint_comment">Coment here ...</string>
    <string name="post_comment">Post</string>
    <string name="new_comment">New</string>

    <string name="find_genre">Find by genre</string>
    <string name="find_author">Find by author</string>

    <string name="title_author_1">Masterpiece</string>
    <string name="title_author_2">New composition</string>

    <string name="title_genre_1">Emotional</string>

    <string name="title_setting">Setting</string>
    <string name="dark_mode">Dark interface mode</string>
    <string name="language">Interface language</string>

    <string name="title_list_comic">List comic</string>

    <string name="title_noti">Notification</string>
    <string name="chapterr">Chapter</string>

    <string name="noti_update_chapter">Updated new chapter: </string>

</resources>
    <string name="on_text">On</string>
    <string name="off_text">Off</string>

    <string-array name="language_options">
        <item>en</item>
        <item>vi</item>
    </string-array>
    <string name="nightmode">Night mode</string>
    <string name="lang_text">Language</string>
    <string name="graphic_setting">Graphic setting</string>

</resources>
