<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.personal.ProfileActivity"
    android:focusable="true"
    android:focusableInTouchMode="true"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/background_rounded_top">

        <ImageButton
            android:id="@+id/btn_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/pink_main"
            app:srcCompat="@drawable/btn_return_white"
            tools:ignore="ContentDescription,ImageContrastCheck,TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:gravity="center"
            android:text="@string/edit_profile_title"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/save_btn_title"
            android:gravity="center"
            android:textSize="24sp"
            android:textColor="@color/blue_main"
            android:textStyle="bold"
            android:background="@drawable/background_pressed"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

<<<<<<< HEAD
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@id/tv_name"
            android:paddingTop="5dp"
            android:src="@drawable/ic_edit_pink"
            tools:ignore="ContentDescription,ImageContrastCheck" />
=======
            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_name_title"
                android:textColor="@color/pink_main"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:paddingTop="5dp"
                android:src="@drawable/ic_edit_pink"
                tools:ignore="ContentDescription,ImageContrastCheck" />
        </LinearLayout>
>>>>>>> Thang

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="text"
            android:text="@string/nva_name"
            android:textSize="22sp"
            tools:ignore="LabelFor,VisualLintTextFieldSize" />

        <TextView
            android:id="@+id/tv_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/num_character"
            android:gravity="end"
            android:layout_below="@id/et_name"
            android:textSize="16sp"/>

        <!-- Set avatar -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/select_img_title"
            android:textColor="@color/pink_main"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_avatar"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginRight="24dp"
                android:layout_marginEnd="24dp"
                android:src="@drawable/avatar"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_change_avatar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_change_avatar"
                    android:backgroundTint="@color/pink_main"
                    android:textStyle="bold"
                    />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/btn_delete_avatar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/pink_main"
                    android:text="@string/btn_delete_avatar"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>