<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".personal.PersonalActivity" >

    <TextView
        android:id="@+id/tv_title_personal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_top"
        android:text="@string/personal_title"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        />

    <LinearLayout
        android:id="@+id/ll_personal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="32dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp">

            <ImageView
                android:id="@+id/iv_avatar"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:scaleType="centerCrop"
                android:src="@drawable/avatar"
                />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/iv_avatar"
                android:layout_marginStart="16dp"
                android:text="Nguyễn Văn A"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/tv_edit_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/tv_name"
                android:layout_alignBottom="@id/iv_avatar"
                android:text="@string/edit_profile_title"
                android:textColor="@color/pink_main"
                android:textSize="18sp"
                app:drawableLeftCompat="@drawable/ic_edit" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/pink_main"
            android:drawableLeft="@drawable/ic_account"
            android:text="@string/account_title"
            android:drawableRight="@drawable/ic_right"
            android:textSize="18sp"
            android:gravity="center_vertical"
            />

        <Button
            android:id="@+id/btn_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/pink_main"
            android:drawableLeft="@drawable/ic_setting"
            android:text="@string/setting_title"
            android:drawableRight="@drawable/ic_right"
            android:textSize="18sp"
            android:gravity="center_vertical"
            />

        <Button
            android:id="@+id/btn_admin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/pink_main"
            android:drawableLeft="@drawable/ic_lock"
            android:text="@string/admin_title"
            android:drawableRight="@drawable/ic_right"
            android:textSize="18sp"
            android:gravity="center_vertical"
            />

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/pink_main"
            android:drawableLeft="@drawable/ic_logout"
            android:text="@string/logout_title"
            android:drawableRight="@drawable/ic_right"
            android:textSize="18sp"
            android:gravity="center_vertical"
            />

    </LinearLayout>


</LinearLayout>