<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.story.StoryDetailActivity">

    <!-- Header -->
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/white">
        <!-- Back Button -->
        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="12dp"
            android:layout_marginBottom="8dp"
            android:background="@color/white"
            android:src="@drawable/btn_return_black"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    </LinearLayout>

    <!-- ScrollView -->
    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottom_buttons">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- Banner nằm dưới nền các View khác -->
                <ImageView
                    android:id="@+id/img_banner"
                    android:layout_width="match_parent"
                    android:layout_height="175dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/banner" />

                <!-- Image and Title -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/img_title"
                        android:layout_width="100dp"
                        android:layout_height="150dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginEnd="16dp"
                        android:scaleType="center"
                        android:src="@drawable/img_title" />

                    <TextView
                        android:id="@+id/tv_name_story"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_toEndOf="@+id/img_title"
                        android:text="@string/name_story"
                        android:textColor="@color/white"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_author_story"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@+id/tv_name_story"
                        android:layout_below="@+id/tv_name_story"
                        android:text="@string/author_story"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="italic" />

                    <Button
                        android:id="@+id/btn_favorite"
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@+id/tv_name_story"
                        android:layout_alignParentBottom="true"
                        android:paddingEnd="14dp"
                        android:paddingStart="12dp"
                        android:backgroundTint="@color/pink_main"
                        android:drawableLeft="@drawable/favorite_white"
                        android:text="@string/btn_favorite"
                        android:textColor="@android:color/white"

                        android:textStyle="bold"/>

                </RelativeLayout>

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <!-- Thể loại -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genre_title"
                    android:textColor="@color/pink_main"
                    android:textSize="18sp"
                    android:textStyle="bold|italic"
                    tools:ignore="TextContrastCheck" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcv_genres"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"/>

                <!-- Description -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/des_title"
                    android:textColor="@color/pink_main"
                    android:textSize="18sp"
                    android:textStyle="bold|italic"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/des_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:text="@string/app_name"
                    app:drawableBottomCompat="@drawable/down" />

                <!-- Chương truyện -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:text="@string/chapter_title"
                    android:textColor="@color/pink_main"
                    android:textSize="18sp"
                    android:textStyle="bold|italic"
                    tools:ignore="TextContrastCheck" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcv_chapters"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <!-- Bottom Buttons -->
    <LinearLayout
        android:id="@+id/bottom_buttons"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_rounded_bottom"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:id="@+id/btn_last_chapter"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/btn_new"
            android:textColor="@color/pink_main"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btn_cmt"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/btn_cmt"
            android:textColor="@color/pink_main"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btn_first_chapter"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/btn_first_chapter"
            android:textColor="@color/pink_main"
            android:textStyle="bold"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>